  for the full list of parameters.
- Preliminary support for per-window rendering settings when multiple
  windows are used. -wi <window index> applies all following rendering-
  related settings to the window of the given index.
- Added overall scale factor to sandbox to simulate different terrain
  sizes; the previous fixed scale, which is now the default scale, was
  100.0 (1:100, 1cm in sandbox is 1m in virtual terrain).

SARndbox-2.1:
- Bumped Vrui version requirement to Vrui-4.1-001.
- Bumped Kinect version requirement to Kinect-3.1.
- Support for all 3D cameras supported by the Kinect-3.1 package.
- Support for multiple display windows with individual rendering
  settings.
- Improvements to DEM tool.

SARndbox-2.2:
- Bumped Vrui version requirement to Vrui-4.2-001.
- Bumped Kinect version requirement to Kinect-3.2.
- Added tool to save the current surface as a DEM file.

SARndbox-2.3:
- Fixed minor scaling issues with sandbox.
- Established better defaults for elevation and rain elevation ranges.
- Added grid scaling option to BathymetrySaverTool.

SARndbox-2.4:
- Added support for 3D input from remote 3D video servers running a
  KinectServer daemon.
- Bumped Vrui version requirement to Vrui-4.4-001.
- Bumped Kinect version requirement to Kinect-3.4.
- Added support for second-generation Microsoft Kinect camera as well as
  Intel RealSense cameras (and all other and future cameras supported by
  the Kinect 3D Video package) to Sandbox and projector calibration
  utility.
- Rewrote projector calibration code using the Kinect::DiskExtractor
  class for improved results, hopefully.

SARndbox-2.5:
- Bumped Vrui version requirement to Vrui-4.5-001.
- Bumped Kinect version requirement to Kinect-3.5.
- Fixed GlobalWaterTool by remembering amount of water added or removed
  on button press, to avoid issues if waterSpeed is changed while button
  is pressed.
- Added handling of multi-line commands on the control pipe and simple
  error checking.